# AT-mind-group-C

./: .gitignore  README.md  project outline.txt  pyproject.toml  requirements.txt  run-llm.cmd  setup.sh  start.sh  vector.py
Data/: Survey_Vendite_Usato.xlsx
RAG Baseline/: README.dev.md  Repo Tree  pyproject.toml
RAG Baseline/at_mind/: api.py  llm.py
RAG Baseline/at_mind/eval/: run_all.py
RAG Baseline/at_mind/ingest/: chunk.py  clean.py  index.py  loaders.py  tags.py
RAG Baseline/at_mind/pii/: redact.py
RAG Baseline/at_mind/prompts/: contract_compose.it.txt  policy_qa.it.txt  system.it.txt
RAG Baseline/at_mind/retriever/: core.py
RAG Baseline/at_mind/skills/contract/: run.py
RAG Baseline/at_mind/skills/objections/: run.py
RAG Baseline/at_mind/skills/policy_qa/: run.py
RAG Baseline/at_mind/tests/: test_contract_fill.py  test_retrieval.py
RAG Baseline/data/devseed/interactions/: sample_chat_redacted.md
RAG Baseline/data/devseed/process/: test_drive_procedura.md
RAG Baseline/data/devseed/training/: script_obiezioni_prezzo.md
RAG Baseline/t_mind/skills/contract/: run.py
RAG Baseline/t_mind/skills/pricing_lookup/: run.py
RAG_Baseline/: Makefile  pyproject.toml
RAG_Baseline/at_mind/: api.py  cli.py  llm.py  schemas.py  scoring.py
RAG_Baseline/at_mind/audit/: __init__.py  logger.py
RAG_Baseline/at_mind/contracts/templates/: vehicle_purchase_v1.md
RAG_Baseline/at_mind/guard/: __init__.py  scope.py
RAG_Baseline/at_mind/ingest/: loaders.py  tags.py
RAG_Baseline/at_mind/prompts/: objections.it.txt  pricing_lookup.it.txt  product_qa.it.txt  system.it.txt  tone_writer.it.txt
RAG_Baseline/at_mind/skills/contract/: run.py
RAG_Baseline/at_mind/skills/cx_insights/: run.py
RAG_Baseline/at_mind/tests/: test_chunking.py  test_numbers_lock.py
(+56 files in other folders)
