[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "at-mind"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn",
  "pydantic>=2",
  "pandas",
  "sqlalchemy",
  "psycopg2-binary",
  "pgvector",
  "python-dotenv",
  "httpx",
  "pytest"
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"


[tool.setuptools.packages.find]
include = ["at_mind*"]
exclude = ["tests*", "docker*", "scripts*", ".*"]
