[project]
name = "AT-mind-group-C"
version = "0.1.0"
description = "AT Mind – RAG baseline"
authors = [{ name = "AT Mind Team" }]
requires-python = ">=3.10"
dependencies = [
"fastapi>=0.110",
"uvicorn>=0.23",
"pydantic>=2.6",
"scikit-learn>=1.3",
"python-dateutil>=2.9",
"markdown-it-py>=3.0",
"numpy>=1.25",
"pytest>=7.4"
]


[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
