[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AT-mind-group-C"
version = "0.1.0"
description = "AT Mind – RAG baseline"
authors = [{ name = "AT Mind Team C" }]
requires-python = ">=3.10"
dependencies = [
"fastapi>=0.110",
"uvicorn>=0.23",
"pydantic>=2.6",
"requests>=2.31",
"pandas>=2.0",
"pypdf>=4.0"
"scikit-learn>=1.3",
"python-dateutil>=2.9",
"markdown-it-py>=3.0",
"numpy>=1.25",
"sqlalchemy",
"psycopg2-binary",
"pgvector",
"python-dotenv",
"httpx",
"pytest>=7.4",
"requests>=2.31"
]


[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"

[tool.setuptools.packages.find]
include = ["at_mind*"]
exclude = ["tests*", "docker*", "scripts*", ".*"]
